# vscode

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
client/: extension.ts
server/: Cargo.toml
server/src/: completion.rs  main.rs  on_change.rs  semantic.rs
